# bscThesis

./: .gitignore  README.md
bsc_thesis/: #thesis.tex#  .latexmkrc  numbertabbing.sty  references.bib  thesis.tex
perdex/: .gitignore  hie.yaml  perdex.cabal
perdex/app/: Uniswap.hs  uniswap-client.hs  uniswap-pab.hs
perdex/src/: Swap.hs
perdex/src/Reserve/: OnChain.hs
perdex/src/Swap/: OffChain.hs  OnChain.hs  Pool.hs  Trace.hs  Types.hs
plutus/: .pre-commit-config.yaml
