Cabal-Version: 2.4
Name: perdex
Version: 0.1.0.0
Author:              Peter Brühwiler
Build-Type:          Simple
Copyright:           © 2021 Lars Bruenjes
License:             Apache-2.0
License-files:       LICENSE

source-repository head
    type: git
    location: https://github.com/input-output-hk/plutus-pioneer-program

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving DeriveLift
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable
    ghc-options: -Wall -Wnoncanonical-monad-instances
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities
                 -- See Plutus Tx readme
                 -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
  hs-source-dirs:      src
  exposed-modules:     Reserve.OnChain
                     , Swap
                     , Swap.OffChain
                     , Swap.OnChain
                     , Swap.Pool
                     , Swap.Trace
                     , Swap.Types
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , containers
                     , data-default
                     , freer-extras
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-tx
                     , prettyprinter
                     , text
                     , freer-simple
                     , plutus-use-cases
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas     -fno-strictness -fno-spec-constr -fno-specialise

executable uniswap-pab
    main-is:         uniswap-pab.hs
    other-modules:   Uniswap
    hs-source-dirs:  app
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wno-missing-import-lists -Wredundant-constraints -O0
    build-depends:
        base >=4.9 && <5,
        aeson -any,
        bytestring -any,
        containers -any,
        data-default -any,
        freer-extras -any,
        freer-simple -any,
        plutus-contract -any,
        plutus-ledger -any,
        plutus-pab,
        prettyprinter -any,
        text -any,
        perdex,
        plutus-use-cases

executable uniswap-client
  main-is:             uniswap-client.hs
  other-modules:       Uniswap
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       aeson
                     , base ^>= 4.14.1.0
                     , bytestring
                     , plutus-contract
                     , plutus-ledger
                     , plutus-pab
                     , prettyprinter
                     , req ^>= 3.9.0
                     , text
                     , uuid
                     , perdex
                     , plutus-use-cases
